--- a/dev/index.html
+++ b/dev/index.html
@@ -70,7 +70,7 @@
 
   <div class="support">
     <p style="margin-bottom: 2rem;">
-      Made with ❤️ and <a href="https://mojs.github.io/" target="_blank" style="line-height: 24px; display: inline-block; height: 24px"><img height="24px" style="vertical-align: middle;" src="mojs.png" alt=""></a> and <a href="https://github.com/dabbott/javascript-playgrounds" target="_blank" style="line-height: 24px; display: inline-block; height: 24px"><img height="24px" style="vertical-align: middle;" src="jp.logo.png" alt=""></a> and <em>...lots of debugging</em> by <a href="https://github.com/kostasx/"
+      Made with ❤️ and <a href="https://mojs.github.io/" target="_blank" style="line-height: 24px; display: inline-block; height: 24px"><img height="24px" style="vertical-align: middle;" src="assets/mojs.png" alt=""></a> and <a href="https://github.com/dabbott/javascript-playgrounds" target="_blank" style="line-height: 24px; display: inline-block; height: 24px"><img height="24px" style="vertical-align: middle;" src="assets/jp.logo.png" alt=""></a> and <em>...lots of debugging</em> by <a href="https://github.com/kostasx/"
         target="_blank">@kostasx</a> for <a href="https://intechgration.io">intechgration.io</a>
     </p>
     <p>
