--- a/www/index.html
+++ b/www/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>mo · js [dev-server]</title>
-  <link rel="shortcut icon" href="favicon.ico">
+  <link rel="shortcut icon" href="assets/favicon.ico">
   <link type="text/css" rel="stylesheet" media="all" href="style.css">
   <!-- Syntax Highlight -->
 
