Added demo link

--- a/dev/index.html
+++ b/dev/index.html
@@ -30,7 +30,7 @@
   <h1>
     <a target="_blank" href="https://www.linkedin.com/feed/update/urn:li:activity:7100948062470062081/">Array Methods
       Visualized</a>
-    <em>...&amp; animated</em>
+    <em>...&amp; <a href="https://in-tech-gration.github.io/JavaScript.Animated/" target="_blank">animated</a></em>
   </h1>
 
   <div class="details" hidden>
