--- a/dev/index.html
+++ b/dev/index.html
@@ -69,9 +69,12 @@
   <!-- PLAYGROUND -->
 
   <div class="support">
-    <p style="margin-bottom: 2rem;">
+    <p>
       Made with ❤️ and <a href="https://mojs.github.io/" target="_blank" style="line-height: 24px; display: inline-block; height: 24px"><img height="24px" style="vertical-align: middle;" src="assets/mojs.png" alt=""></a> and <a href="https://github.com/dabbott/javascript-playgrounds" target="_blank" style="line-height: 24px; display: inline-block; height: 24px"><img height="24px" style="vertical-align: middle;" src="assets/jp.logo.png" alt=""></a> and <em>...lots of debugging</em> by <a href="https://github.com/kostasx/"
         target="_blank">@kostasx</a> for <a href="https://intechgration.io">intechgration.io</a>
+    </p>
+    <p style="margin-bottom: 2rem;">
+      Our GitHub repository welcomes <a href="https://github.com/in-tech-gration/JavaScript.Animated/discussions" target="_blank">Discussions/Suggestions</a>, <a href="https://github.com/in-tech-gration/JavaScript.Animated/issues" target="_blank" rel="noopener noreferrer">Issues/Bug reports</a> and <a href="https://github.com/in-tech-gration/JavaScript.Animated/pulls" target="_blank" rel="noopener noreferrer">Pull Requests.</a>
     </p>
     <p>
       <a href="https://www.buymeacoffee.com/kostasx"><img
