add audio mute functionality

--- a/www/pizza-slice/index.html
+++ b/www/pizza-slice/index.html
@@ -28,6 +28,7 @@
           <button id="start">Start the Challenge 🌶️</button>
           <button id="reset">Reset</button>
           <button id="negative">Negative Index</button>
+          <button id="mute" data--mute="false">🔇</button>
           <!-- <code>pizza.slice(1,7);</code> -->
         </div>
       </div>
